src/objects/SFDC_Resource__c.object
<CustomObject>
    <description>The human internal Resource, or external partner, available to work on a Project.</description>
    <fields>
        <fullName>API_Artists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Artists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_deliver_on_budget__c</fullName>
        <label>Ability to deliver on budget</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Junkies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Junkies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Skills__c</fullName>
        <label>Client Engagement Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Objects_Skills__c</fullName>
        <label>Custom Objects Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Loaders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Loaders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Skills__c</fullName>
        <label>Data Migration Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Authorization__c</fullName>
        <label>Date of Last Authorization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excel_Calculations_Gurus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excel Calculations Gurus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Languages__c</fullName>
        <label>Foreign Languages</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Rate_Ever_Billed__c</fullName>
        <label>Highest Rate Ever Billed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Skills__c</fullName>
        <label>Integration Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Java_Coders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Coders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Project_Skills__c</fullName>
        <label>Large Project Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lowest_Rate_Ever_Billed__c</fullName>
        <label>Lowest Rate Ever Billed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Process_savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Topic_Skills__c</fullName>
        <label>Marketing Topic Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Skill_Level__c</fullName>
        <label>Overall Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Process_Savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Staff_Available__c</fullName>
        <label>Size of Staff Available</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Billing_Rate__c</fullName>
        <label>Standard Billing Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Process_Savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Topics_Skills__c</fullName>
        <label>Support Topics Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Skills__c</fullName>
        <label>Training Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_resources__c</fullName>
        <label>Ability to deliver on time</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sForce_Controls_Skills__c</fullName>
        <label>sForce Controls Skills</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>AllResources</fullName>
        <columns>NAME</columns>
        <columns>Overall_Skill_Level__c</columns>
        <columns>Integration_Skills__c</columns>
        <columns>Standard_Billing_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Resources</label>
    </listViews>
    <nameField>
        <label>Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>